--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# The directory Mix will write compiled artifacts to.
+# The directories Mix will write compiled artifacts to.
 /_build/
+.elixir_ls/
 
 # If you run "mix test --cover", coverage assets end up here.
 /cover/
@@ -21,4 +22,6 @@ erl_crash.dump
 
 # Ignore package tarball (built via "mix hex.build").
 stump-*.tar
+
+
 
